--- a/style.css
+++ b/style.css
@@ -1,30 +1,119 @@
 #pic1 {
+
     display: block;
+
     margin-left: auto;
+
     margin-right: auto;
+
     width: 50%;
+
     border: 5px solid black;
+
 }
+
+
+
 
 
 .topstart {
+
     display: block;
+
     margin-left: auto;
+
     margin-right: auto;
+
     width: 50%;
+
     font-family: sans-serif;
+
+    clear: both;
+
+    float: center;
+
+    color: yellow;
+
+    font-weight: bold;
+
 }
+
+
+
+#friend{
+
+    background-color: yellow;
+
+}
+
+
 
 .paragraph {
+
     display: block;
+
     margin-left: auto;
+
     margin-right: auto;
+
+    float: center;
+
     width: 50%;
+
     font-family: sans-serif;
+
+    padding: 5px;
+
+    clear: both;
+
 }
 
+
+
 .table1 {
+
+    display: block;
+
     margin-left: auto;
+
     margin-right: auto;
-    font-family: sans-serif;
+
+    width: 50%;
+
+    font-family: cursive;
+
+}
+
+
+
+.tbc {
+
+    float: left;
+
+    margin-right: 10px;
+
+    background-color: lightblue;
+
+    width: 160px;
+
+    border: 2px dotted black;
+
+    font-family: cursive;
+
+    color: red;
+
+}
+
+
+
+#img1, #img2 {
+
+    display: block;
+
+    margin-left: auto;
+
+    margin-right: auto;
+
+    width: 35%;
+
 }
